crates/sui-adapter-transactional-tests/tests/private_generics/internal_same_package_fail@v2.snap
---
source: external-crates/move/crates/move-transactional-test-runner/src/framework.rs
---
processed 2 tasks

task 1, lines 8-20:
//# publish
Error: error[Sui E02009]: invalid private transfer call
   ┌─ /var/folders/62/v3v8dn5s3r33fgn4vtsywp580000gn/T/.tmpg51oLT:16:17
   │
16 │         let _ = internal::permit<CustomType>();
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │                 │                │
   │                 │                The type 'test::custom_type::CustomType' is not declared in the current module
   │                 Invalid call to an internal function. The function 'std::internal::permit' is restricted to being called in the module that defines the type, 'test::custom_type'
